# TT-ScalProdOpt

./: .gitignore  .gitmodules  CMakeLists.txt  OptiGUI  README.md  contegra_wrapper.py  cotengra_wrapper.py  debug.py  exec_example.sh  merge_plots.py  review_script.py  ruche_task.sh  ruche_task_legacy_env.sh  submit_ruche.sh  submit_ruche_legacy_env.sh  test.sh  xmake.lua
GUI/: __init__.py  algorithms.py  main.py  plot_config.py
GUI/Custom_widget/: __init__.py  checkbox_array.py  integer_entry.py  message_frame.py  scrollable_frame.py  tab_list.py
GUI/Group_manager/: algorithm_entries.py  group_manager.py  instance_list.py  instance_parser.py
GUI/Result_tab/: dataset_viewer.py  plot_frame.py  result_page.py  result_tab.py
calc/: test.txt
envs/: ttvibr.yml
instances/test/: generator.py  generator2.py  generator_qc.py  generator_qc2.py  generator_qc3.py  generator_same2.py  generator_xAxt.py  instance_10_cos_like.txt  instance_10_random.txt  instance_20_cos_like.txt  instance_20_random.txt  instance_30_cos_like.txt  instance_30_random.txt  instance_40_cos_like.txt  instance_40_random.txt  test0.txt  test1.txt  test2.txt  test3.txt  test4.txt
plot/: Analysis.ipynb
results/: results.csv
src/: Main.cpp  Main.hpp
src/AllEdgeByEdge/: AllEdgeByEdge.cpp  (+2 more)
tools/: compute_tests.py  compute_tests_ML.py  compute_tests_par copy.py  compute_tests_par.py  cpu.py  flatten_order.py  generate_tests.py  generate_tests_review.py  naive_cost.py  plot.py  plot_tests.py  rl-tnco-training.ini  test_cases_dim50.ini  test_script.py  test_script_cotengra.py  validation_script.py
(+547 files in other folders)
